--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fortress-test",
-  "version": "0.0.0",
+  "name": "fortress-app",
+  "version": "0.0.1",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
